# grpc-gateway

./: WORKSPACE  repositories.bzl
examples/internal/helloworld/: BUILD.bazel
examples/internal/proto/examplepb/: BUILD.bazel
internal/codegenerator/: BUILD.bazel
internal/descriptor/apiconfig/: BUILD.bazel
proto/gateway/: BUILD.bazel  event_source.pb.go  event_source.proto
proto/google/protobuf/: BUILD.bazel
protoc-gen-grpc-gateway/: BUILD.bazel
protoc-gen-grpc-gateway/internal/gengateway/: BUILD.bazel  template.go  template_mini_test.go
protoc-gen-openapiv2/options/: BUILD.bazel
runtime/: BUILD.bazel  handler.go  marshal_jsonpb_eventstream.go  query.go
utilities/: BUILD.bazel
