load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "event_source_proto_files",
    srcs = [
        "event_source.proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":event_source_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/proto/gateway",
)

proto_library(
    name = "event_source_proto",
    srcs = [
        "event_source.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

go_proto_library(
    name = "event_source_go_proto",
    compilers = ["//:go_apiv2"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/proto/gateway",
    proto = ":event_source_proto",
)
