load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "anypb_proto",
    srcs = ["any.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "anypb_go_proto",
    compilers = ["//:go_apiv2"],
    importpath = "google.golang.org/protobuf/types/known/anypb",
    proto = ":anypb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":anypb_go_proto"],
    importpath = "google.golang.org/protobuf/types/known/anypb",
    visibility = ["//visibility:public"],
)
